5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1863_2218.log
== TEST (2019-07-02 11:22:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = 0
for i in range(size(a[1])):
	for j in range(size(a[1])):
		if i <= :
			b += a[i,j]
print(b)
-- ERROR:
File "XXXX", line 7
    if i <= :
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = 0
for i in range(size(a[1])):
	for j in range(size(a[1])):
		if i <= j:
			b += a[i,j]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:23:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = 0
for i in range(size(a[1])):
	for j in range(size(a[1])):
		if i <= j:
			b += a[i,j]
print(b)
-- EXECUTION TIME:
1.0347
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
48
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
3.0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
821.6999999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:23:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = 0
for i in range(size(a[1])):
	for j in range(size(a[1])):
		if i < j:
			b += a[i,j]
print(b)
-- EXECUTION TIME:
1.0647
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.3800000000000001
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
590.9
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:23:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = 0
for i in range(size(a[1])):
	for j in range(size(a[1])):
		if i < j:
			b += a[i,j]
print(round(b,2))
-- EXECUTION TIME:
1.23618
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
590.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
